# deployfix

./: .gitignore  Cargo.toml  Dockerfile  README.md  run_k8s_tests.sh  run_kwok_sim_test.sh
lib/k8s-openapi/: Cargo.toml
lib/k8s-openapi/src/: deep_merge.rs
lib/serde-yaml/src/: de.rs  lib.rs  span.rs
lib/serde-yaml/tests/: test_de.rs
sample/dataset/: app1.yaml  app10.yaml  app100.yaml  app101.yaml  app102.yaml  app103.yaml  app104.yaml  app105.yaml  app106.yaml  app107.yaml  app108.yaml  app109.yaml  app11.yaml  app110.yaml  app111.yaml  app112.yaml  app113.yaml  app114.yaml  app115.yaml  app116.yaml  app117.yaml  app118.yaml  app119.yaml  app12.yaml  app13.yaml  app14.yaml  app15.yaml  app16.yaml  app17.yaml  app18.yaml  app19.yaml  app20.yaml  app21.yaml  app22.yaml  app23.yaml  app24.yaml  app25.yaml  app26.yaml  app27.yaml  app28.yaml  (+78 more)
sample/deployfix/: inject.ir
sample/envs/: sample.env
sample/k8s/: S0.yaml  S1.yaml
sample/k8s/2-application-affinity-and-antiaffinity/: app1.yaml  app2.yaml
sample/k8s/2-application-affinity-and-antiaffinity-2/: app1.yaml  app2.yaml
sample/motivation/: app2-v2-patch.yaml  apps.yaml  nodes.yaml
sample/yarn/: rule01.spec  rule02.spec
sim-scripts/: check_result.py  generate_dataset.py  run_fake_deployment.py
src/: lib.rs  main.rs
src/cli/: annotate.rs  mod.rs
src/model/: entity.rs  env.rs  formatter.rs  mod.rs  parser.rs  rule.rs  topology.rs
src/plugin/: mod.rs
src/plugin/k8s/: cli.rs  (+2 more)
src/solver/: map.rs  mod.rs  ring.rs  solver.rs  unknown.rs  z3.rs
src/util/: mod.rs
tests/: advance.rs  basic.rs
(+52 files in other folders)
