[package]
name = "deployfix-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "deployfix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.10.0"
nom = "7.1.3"

num_cpus = "1.16.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = { version = "0.9.27", path = "./lib/serde-yaml"}

thiserror = "1.0.50"
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }

z3 = {version="0.12", features = ["static-link-z3"]}

log = "0.4.20"
flexi_logger = "0.27.3"

k8s-openapi = { version = "0.20.0", features = ["v1_28"], path = "./lib/k8s-openapi" }

dashmap = "5.5.3"

petgraph = "0.6.4"
graph-cycles = "0.1.0"

[dev-dependencies]
ctor = "0.2.6"
either = "1.9.0"
petgraph-gen = "0.1.3"
rand = { version = "0.8.5", features = ["small_rng"]}